--- a/styles/Dashboard.module.css
+++ b/styles/Dashboard.module.css
@@ -1,42 +1,38 @@
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Lobster&family=Playpen+Sans+Thai:wght@100..800&display=swap');
-
-.drawer{
-  display: flex;
-  height: 100vh;
-  position: relative;
-  z-index: 2;
-}
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Lobster&family=Playpen+Sans+Thai:wght@100..800&display=swap");
 
 
-.menu{
-  
-  background-color: rgb(100, 100, 100);
+.content {
+  position: absolute;
+  left: 3.8rem;
+  width: calc(100% - 3.8rem);
   min-height: 100vh;
 }
 
-.navLink li{
-  margin: .3rem 0;
-  padding: .6rem;
-} 
+.navLink {
+  position: fixed;
+  list-style-type: none;
+  z-index: 1;
+  padding: 0 1.12rem;
+  overflow: hidden;
+  background-color: rgb(16, 41, 62);
+  min-height: 100vh;
+}
 
-.navLink a{
+.navLink a {
   color: rgb(223, 223, 223);
   display: flex;
-  gap: .5rem;
+  gap: 0.5rem;
+  text-decoration: none;
   align-items: center;
 }
 
-.logo{
+.icon {
+  position: absolute;
+  cursor: pointer;
+  right: 0;
+  top: 6rem;
+  color: whitesmoke;
+  font-size: 1.6rem;
   display: flex;
-  font-weight: bold;
-  align-items: center;
-  background-color: rgb(227, 227, 243);
-  padding: .6rem .7rem ;
- font-family: "Dancing Script", cursive;
- font-size: 1.5rem;
-}
-
-.logo span{
-  font-size: 2rem;
-  color: orangered;
+  justify-content: center;
 }
