add menu in sidebar

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,9 +5,13 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
+[data-collapse="true"] {
+  transition: 0.3s;
+}
 
 [data-collapse="true"] .nav-name {
   display: block;
+
 }
 
 .nav-name {
