--- a/styles/Dashboard.module.css
+++ b/styles/Dashboard.module.css
@@ -12,8 +12,8 @@
   position: fixed;
   list-style-type: none;
   z-index: 1;
-  padding: 0 1.12rem;
-  overflow: hidden;
+  padding: 1.1rem;
+  /* overflow: hidden; */
   background-color: rgb(16, 41, 62);
   min-height: 100vh;
 }
@@ -22,17 +22,23 @@
   color: rgb(223, 223, 223);
   display: flex;
   gap: 0.5rem;
-  text-decoration: none;
+  margin:1rem 0;
   align-items: center;
 }
 
 .icon {
   position: absolute;
   cursor: pointer;
-  right: 0;
-  top: 6rem;
+  /* right: 0; */
+  /* top: 0; */
   color: whitesmoke;
   font-size: 1.6rem;
   display: flex;
   justify-content: center;
+}
+
+.icon span{
+  color: rgb(202, 202, 202);
+  font-size: 2rem;
+ 
 }
