ajouter card in page

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 body {
   font-family: "Montserrat", sans-serif;
 }
-
+/* 
 [data-collapse="true"] {
   transition: 0.3s;
 }
@@ -17,3 +17,4 @@ body {
 .nav-name {
   display: none;
 }
+ */
