--- a/styles/Homepage.module.css
+++ b/styles/Homepage.module.css
@@ -1,6 +1,7 @@
 .content {
   margin: 1rem;
   border-radius: 3px;
+  background-color: rgb(255, 255, 255);
 }
 
 .cards {
@@ -23,6 +24,7 @@
   box-shadow: 0 1px 5px rgb(179, 179, 179);
   display: flex;
   border-radius: 5px;
+
   justify-content: space-between;
   padding: 1.6rem;
   background-color: rgb(255, 255, 255);
